2598 [Log]                  delete log files after 90 days
2597 [QAAC]                 do not delete portable dll files during update
2596 [DGIndexIM/NV]         improved error handling
2595 [DGIndexIM/NV]         fixed crash when the indexer directory is not available (regression of 2585)
2594 [Update]               fixed update installation detection (regression of 2586)
2593 [L-SMASH Indexer]      improved support for 10bit files
2592 [Profile]              fixed profile deletion (regression of 2590)
2591 [AudioEncoder]         improved job abort and priority change. Bug #813
2590 [Profile]              improved profile saving II
                            fixed missing option to save to scratchpad (regression of 2589)
2589 [Profile]              "Load Defaults" resets the selected profile (before it was the scratchpad one)
                            improved profile saving
                            profiles will be saved to disk also when a profile is changed
2588 [Update]               improved restart handling
2587                        remove unnecessary runtime files at startup
2586 [Update]               if a package needs to be enabled in the settings it will not be shown in the update window
2585 [DGIndexIM/NV]         copy license.txt to the other indexer if possible
2584 [Update]               clean package directory during update
2582 [MediaInfo]            fixed language detection for VOB files (regression of 2572)
2581 [Update]               if a update cache file is obsolete it will be retained for 90 days
2580 [Update]               changed backup to be disabled by default
2579 [Update]               improved handling of packages which require a restart
                            merged several MeGUI dlls into one package
2578 [Main]                 a second instance of the same executable is blocked
                            if file permissions are not available MeGUI will not start